SDK-1839 - [Android Networking] Release v1.4.0